--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,6 +1,6 @@
 @CHARSET "UTF-8";
 body {
-	background-color: #eee;
+	/*background-color: #eee;*/
 }
 .sign {
 /*     background-color: #eee; */
@@ -9,7 +9,7 @@ body {
 }
 
 .blck{
-	background: #ffffff;
+	background: #fff;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 	border: 0 none;
     box-sizing: border-box;
